@@ -1,6 +1,5 @@
 package ninja.controller;
 
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -14,16 +13,12 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Sets;
 
-import net.gpedro.integrations.slack.SlackAttachment;
-import net.gpedro.integrations.slack.SlackMessage;
 import ninja.consts.Act;
 import ninja.consts.Color;
 import ninja.consts.Filter;
 import ninja.service.Bus;
-import ninja.slack.Action;
 import ninja.util.Cast;
 import ninja.util.Check;
 import ninja.util.Slack;
@@ -32,7 +27,7 @@ import ninja.util.Slack;
 public class BusController extends DialogController {
 	private static final String WEB_URL = "https://ebus.gov.taipei/EBus/VsSimpleMap?routeid=%s&gb=0", TITLE = "台北市公車路線簡圖";
 
-	private static final Map<Double, String> STATUS = ImmutableMap.of( 1d, "尚未發車", 2d, "交管不停靠", 3d, "末班車已過", 4d, "今日未營運" );
+	private static final Map<Double, String> STATUS = Map.of( 1d, "尚未發車", 2d, "交管不停靠", 3d, "末班車已過", 4d, "今日未營運" );
 
 	@Autowired
 	private Bus bus;
@@ -43,19 +38,19 @@ public class BusController extends DialogController {
 	@PostMapping( "/bus" )
 	@Async
 	public void bus( @RequestParam String command, @RequestParam String text, @RequestParam( RESPONSE_URL ) String url ) {
-		String[] params = text.contains( StringUtils.SPACE ) ? Check.params( text ) : ArrayUtils.toArray( text, StringUtils.EMPTY );
+		var params = text.contains( StringUtils.SPACE ) ? Check.params( text ) : ArrayUtils.toArray( text, StringUtils.EMPTY );
 
 		String route = params[ 0 ], stop = params[ 1 ], unwrap = bus.unwrap( stop ), filter;
 
 		Check.expr( bus.check( route ), "查無路線: " + route );
 
-		Map<String, ?> info = bus.call( "Route", filter = Filter.ROUTE.eq( route ) ).get( 0 ); // 原則上不可能拿不到
+		var info = bus.call( "Route", filter = Filter.ROUTE.eq( route ) ).get( 0 ); // 原則上不可能拿不到
 
 		String departure = Cast.string( info, "DepartureStopNameZh" ), destination = Cast.string( info, "DestinationStopNameZh" );
 
-		SlackAttachment attach = Slack.attachment( route + "公車動態", String.format( WEB_URL, bus.id( route ) ) );
+		var attach = Slack.attachment( route + "公車動態", String.format( WEB_URL, bus.id( route ) ) );
 
-		SlackMessage message = Slack.message( attach, command, text );
+		var message = Slack.message( attach, command, text );
 
 		if ( stop.isEmpty() ) {
 			message( message, url );
@@ -65,7 +60,7 @@ public class BusController extends DialogController {
 
 		filter = Filter.and( filter, stop.equals( unwrap ) ? Filter.STOP.contains( stop ) : Filter.STOP.eq( unwrap ), Filter.DIRECTION.le( "1" ) );
 
-		List<Map<String, ?>> info2 = Check.list( bus.call( "EstimatedTimeOfArrival", filter, "$orderby=Direction" ), "查無站牌: " + stop );
+		var info2 = Check.list( bus.call( "EstimatedTimeOfArrival", filter, "$orderby=Direction" ), "查無站牌: " + stop );
 
 		info2.stream().collect( Collectors.groupingBy( bus::stop, Collectors.toList() ) ).forEach( ( k, v ) -> {
 			message.addAttachments( Slack.attachment( Color.G ).setText( ":busstop:" + k ).setFields( list( v.stream().map( i -> {
@@ -81,7 +76,7 @@ public class BusController extends DialogController {
 	@PostMapping( "/station" )
 	@Async
 	public void station( @RequestParam String text, @RequestParam( RESPONSE_URL ) String url ) {
-		String[] params = Check.station( Check.params( text ) );
+		var params = Check.station( Check.params( text ) );
 
 		String start = params[ 0 ], end = params[ 1 ], filter = Filter.or( Filter.STATION.eq( start ), Filter.STATION.eq( end ) );
 
@@ -92,11 +87,11 @@ public class BusController extends DialogController {
 
 		Check.expr( info.keySet().size() == 2, "查無起站或訖站: " + text );
 
-		Action action = Slack.action( Act.BUS, "請選擇路線查詢動態" );
+		var action = Slack.action( Act.BUS, "請選擇路線查詢動態" );
 
 		Sets.intersection( info.get( start ), info.get( end ) ).stream().sorted().forEach( i -> action.addOption( option2( i, bus.text( i, start ) ) ) );
 
-		SlackAttachment attach = Slack.attachment( Act.BUS ).setFallback( TITLE ).setText( tag( start, end ) ).addAction( action );
+		var attach = Slack.attachment( Act.BUS ).setFallback( TITLE ).setText( tag( start, end ) ).addAction( action );
 
 		message( Slack.message().addAttachments( Slack.author( attach, TITLE, Bus.ROUTES_URL, this.url ) ), url );
 	}
