@@ -4,14 +4,12 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.stream.Stream;
 
-import com.google.common.collect.ImmutableMap;
-
 import ninja.service.Data;
 
 public abstract class GroupController<T> extends DialogController {
     protected String groups( Data<T> data ) {
         return json( data.data().entrySet().stream().map( i -> {
-            return ImmutableMap.of( LABEL, i.getKey(), OPTIONS, list( group( i ) ) );
+            return Map.of( LABEL, i.getKey(), OPTIONS, list( group( i ) ) );
         } ) );
     }
 
