@@ -1,6 +1,5 @@
 package ninja.task;
 
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
@@ -30,14 +29,14 @@ public class TestTask implements IService {
     @Scheduled( cron = "0 0 18 * * *", zone = Zone.TAIPEI )
     @Override
     public void exec() {
-        List<String> tokens = System.getenv().keySet().stream().filter( i -> i.startsWith( "slack.legacy.token" ) ).collect( Collectors.toList() );
+        var tokens = System.getenv().keySet().stream().filter( i -> i.startsWith( "slack.legacy.token" ) ).collect( Collectors.toList() );
 
         String thsr = String.format( "thsr 南港 台中 %tF 10:00 出發", new Date() ), token;
 
         log.info( "Token: {}", token = tokens.get( Calendar.getInstance().get( Calendar.DAY_OF_WEEK ) % tokens.size() ) );
 
-        Arrays.asList( "bus 內湖幹線 \"康寧醫院\"", "movie 哈拉影城", "mrt 中山 松山", "station 康寧醫院 捷運內湖站", "theater 哈拉影城", "dict pig", thsr ).forEach( i -> {
-            String[] params = i.split( " ", 2 );
+        List.of( "bus 內湖幹線 \"康寧醫院\"", "movie 哈拉影城", "mrt 中山 松山", "station 康寧醫院 捷運內湖站", "theater 哈拉影城", "dict pig", thsr ).forEach( i -> {
+            var params = i.split( " ", 2 );
 
             Utils.call( String.format( COMMAND_URL, System.getenv( token ), channel, params[ 0 ], UrlEscapers.urlFragmentEscaper().escape( params[ 1 ] ) ) );
         } );
